Update assets README

--- a/assets/README
+++ b/assets/README
@@ -1,1 +1,10 @@
+# assets
+
+This folder contains anonymised visual evidence supporting the project, such as:
+- workflow screenshots
+- output previews
+- App Script code screenshots
+- validation evidence (format checks, uniqueness checks)
+
+All visuals in this folder are **redacted/anonymised** to protect privacy.
 
