Update assets README

--- a/assets/README
+++ b/assets/README
@@ -1,10 +1,61 @@
-# assets
+# Assets (Screenshots)
 
-This folder contains anonymised visual evidence supporting the project, such as:
-- workflow screenshots
-- output previews
-- App Script code screenshots
-- validation evidence (format checks, uniqueness checks)
+This folder contains **implementation evidence** screenshots for the anonymised staff ID workflow.
 
-All visuals in this folder are **redacted/anonymised** to protect privacy.
+> **Privacy reminder:** Before publishing publicly, double-check that:
+> - emails/phone numbers/names are fully redacted,
+> - any organisation identifiers are removed or treated as anonymised placeholders,
+> - no addresses or internal tool URLs are visible.
 
+---
+
+## 1) Apps Script — unique ID generation
+
+- **`AppScript_UQC_ID1.jpeg`**  
+  Shows the Apps Script project and functions used to generate and append a unique Staff ID to the Google Sheet.
+
+- **`AppScript_UQC_ID(cont).jpeg`**  
+  Continuation view showing the ID formatting logic (prefix + padded numeric suffix), duplicate checking, and helper/test functions.
+
+---
+
+## 2) Google Forms — staff registration entry point
+
+- **`UQC_StaffID_GoogleForms.jpeg`**  
+  The registration form used to capture staff details (minimal fields for onboarding).
+
+---
+
+## 3) Google Sheets — registration database (anonymised)
+
+- **`UQC_StaffID_Data1(Anonymised).jpeg`**  
+  Anonymised responses sheet showing the main columns (Timestamp, Full Name, Mobile Number, Email Address, Merge status, Staff ID).
+
+- **`UQC_StaffID_Data2(Anonymised).jpeg`**  
+  Additional view of the same sheet demonstrating ongoing records and Staff ID assignment.
+
+---
+
+## 4) YAMM — email template + delivery rules
+
+- **`Template_Email_for YAMM_to_fetch_from.jpeg`**  
+  Email template used for sending the Staff ID to the registrant using merge tags (e.g., name, Staff ID).
+
+- **`UQC_StaffID_Registration_System_NotificationRules_YAMM.jpeg`**  
+  Notification rules configuration: uses the email column as recipient and waits until the Staff ID column is populated before sending.
+
+- **`UQC_StaffID_Registration_System_Tracking_Report_YAMM.jpeg`**  
+  Tracking report showing email delivery outcomes for operational monitoring.
+
+---
+
+## 5) IFTTT (Optional) — push notification for new registration rows
+
+- **`IFTTT_Integration1.jpeg`**  
+  Applet overview: trigger is “new row added to spreadsheet”, action is “send notification”.
+
+- **`IFTTT_Integration2.jpeg`**  
+  Detailed “How this automation works” screen showing available trigger fields and notification action.
+
+- **`IFTTT_Integration3.jpeg`**  
+  Services connected + run history (evidence that the applet executed successfully).
